Added popups and removed newsfeed button

--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/Home.cshtml
@@ -9,5 +9,7 @@
     <br />
  
     Html.RenderAction("PostToFriendsWall", "Facebook");
+    <br />
+    Html.RenderAction("NewsFeed","Facebook");
 
 }
