--- a/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Facebook/UpdateStatus.cshtml
@@ -12,6 +12,9 @@
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 console.log(xhr.responseText);
+                alert("Posted Successfully");
+                document.getElementById('status-input').value = '';
+
             }
         });
     }
