added chat box to front of we bsite, removed chat nav bar.

--- a/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Home/Index.cshtml
@@ -8,4 +8,5 @@
     @{ Html.RenderAction("Home", "Facebook"); }
 </p>
     @{ Html.RenderAction("NewsFeed","Facebook");}
+@{ Html.RenderAction("Chat", "Chat");}
 
