--- a/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Chat/Chat.cshtml
@@ -9,14 +9,13 @@
      <div id="messageContainer">
     <div id="chatHistoryContainer">
         <button id="historyButton" title="Chat History" style="float: left;position: relative; height:60px; width: 60px" />       
-        <h2 style="left:190px; position: absolute; margin: 0 auto; text-align:center">Chat</h2>
+        <h2>Chat</h2>
     </div>
     <div id="messageArea">
     </div>
     <div id="messageInput" class="ui-corner-all">
         <div id="messageBlock">
-            <label class="ui-widget-content ui-widget ui-state-default ui-corner-all" for="msg" >Message: </label>
-            <input class="input.ui-button" id="msg" style="height:40px; padding-top:5px;"/>
+            <input class="input.ui-button" id="msg" placeholder="Enter a message..." />
         </div>
         <div id="sendButton">
             <button id="btn" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only ui-state-hover" role="button" aria-disabled="false"><span class="ui-button-text">Send</span></button>
