--- a/StocksWithFriends/StocksWithFriends/Views/Stock/Index.cshtml
+++ b/StocksWithFriends/StocksWithFriends/Views/Stock/Index.cshtml
@@ -15,6 +15,7 @@
         <input type="number" name="quantity" id="quantity" min="1" step="1" value="1" style="width: 50px">
         <input type="button" id="executeBuy" value="Buy">
         <input type="button" id="executeSell" value="Sell">
+        <label for="tradeResult" id="tradeResult"></label>
     </div>
     <div id="stocks-left-pane">
         <h3>My Stocks</h3>
